[REFACT] 약간의 코드 정리

--- a/ColorNote Backup Viewer/ColorNote Backup Viewer.csproj
+++ b/ColorNote Backup Viewer/ColorNote Backup Viewer.csproj
@@ -74,7 +74,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DialogReferencer.cs" />
+    <Compile Include="NewWindowGenerator.cs" />
     <Compile Include="Model\AESDecryptor.cs" />
     <Compile Include="Model\BackupFileData.cs" />
     <Compile Include="Model\BackupFileReader.cs" />
