--- a/ColorNote Backup Viewer/ColorNote Backup Viewer.csproj
+++ b/ColorNote Backup Viewer/ColorNote Backup Viewer.csproj
@@ -88,9 +88,13 @@
     <Compile Include="RelayCommand.cs" />
     <Compile Include="SortType.cs" />
     <Compile Include="ViewModel\BackupFileViewModel.cs" />
+    <Compile Include="ViewModel\CalendarViewViewModel.cs" />
+    <Compile Include="ViewModel\ListViewViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="ViewModel\MemoContentWindowViewModel.cs" />
     <Compile Include="ViewModel\MemoViewViewModelFactory.cs" />
     <Compile Include="ViewModel\MemoViewViewModel.cs" />
+    <Compile Include="ViewModel\MonthDayViewModel.cs" />
     <Compile Include="ViewModel\NewFileInputDialogViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="ViewModel\OpenFilesMenuViewModel.cs" />
@@ -102,6 +106,9 @@
     </Compile>
     <Compile Include="View\ListView.xaml.cs">
       <DependentUpon>ListView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\MemoContentWindow.xaml.cs">
+      <DependentUpon>MemoContentWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\MemoView.xaml.cs">
       <DependentUpon>MemoView.xaml</DependentUpon>
@@ -178,6 +185,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="View\ListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\MemoContentWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
