[FEAT] 메모 외부 파일로 내보내기 기능 완성

--- a/ColorNote Backup Viewer/ColorNote Backup Viewer.csproj
+++ b/ColorNote Backup Viewer/ColorNote Backup Viewer.csproj
@@ -50,6 +50,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.11.61.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>packages\HtmlAgilityPack.1.11.61\lib\Net45\HtmlAgilityPack.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL" />
@@ -100,9 +103,12 @@
     <Compile Include="ViewModel\OpenFilesMenuViewModel.cs" />
     <Compile Include="ViewModel\MemoFilesData.cs" />
     <Compile Include="ViewModel\SortOrderSelecterViewModel.cs" />
-    <Compile Include="ViewType.cs" />
+    <Compile Include="ExportType.cs" />
     <Compile Include="View\CalendarView.xaml.cs">
       <DependentUpon>CalendarView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\ExportPopup.xaml.cs">
+      <DependentUpon>ExportPopup.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\ListView.xaml.cs">
       <DependentUpon>ListView.xaml</DependentUpon>
@@ -184,6 +190,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\ExportPopup.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\ListView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -223,6 +233,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
